# picom

./: __init__.py  pngquant.py  readme.md  setup.cfg  setup.py
src/picom/: __init__.py  cli.py  pillow_handler.py  pngquant.py  upload.py
